@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Everspring Outdoor Motion Detector SP816-1
+https://products.z-wavealliance.org/products/2656
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- Configuration not Supported-->
+  <!-- Basic set as report -->
+  <CommandClass id="32" setasreport="true"/>
+  <!-- COMMAND_CLASS_ASSOCIATION. Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="2">
+      <Group index="1" max_associations="1" label="Lifeline" />
+      <Group index="2" max_associations="4" label="Control" />
+    </Associations>
+  </CommandClass>
+</Product>
